force-app/main/default/objects/Asset/fields/Asset_Location_Set__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location_Set__c</fullName>
    <formula>NOT(ISBLANK( Asset_Location__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Location Set</label>
    <type>Checkbox</type>
</CustomField>