force-app/main/default/objects/Asset/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF( $Profile.Name = &apos;FSL Standard User&apos;,&apos;&apos;,Product2.ProductImageRelatedList__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>