force-app/main/default/objects/Asset/fields/Performance_Status__c.field-meta.xml
<CustomField>
    <fullName>Performance_Status__c</fullName>
    <description>Used by SMS Process Builder to fire message notification when Performace_Status__c = Low</description>
    <inlineHelpText>Used by SMS Process Builder to fire message notification when Performace_Status__c = Low</inlineHelpText>
    <label>Performance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>