force-app/main/default/objects/Asset/fields/SMS_Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>SMS_Notification_Number__c</fullName>
    <label>SMS Notification Number</label>
    <type>Phone</type>
</CustomField>