force-app/main/default/objects/Asset/fields/Warranty_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Indicator__c</fullName>
    <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Entitlement_Status__c, 
&quot;Expired&quot;, &quot;0155f000001na5S&amp;oid=00D5f000006tYUG&quot;, 
&quot;Active&quot;,&quot;0155f000001na5T&amp;oid=00D5f000006tYUG&quot;, 
&quot;30 Day Warning&quot;, &quot;0155f000001na5U&amp;oid=00D5f000006tYUG&quot;, 
&quot;0155f000001na5T&amp;oid=00D5f000006tYUG&quot;),&quot;Active Contract?&quot;,24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty</label>
    <type>Text</type>
</CustomField>