force-app/main/default/objects/Asset/listViews/My_Assets.listView-meta.xml
<ListView>
    <fullName>My_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>Entitlement_Status__c</columns>
    <columns>B2B_Product_Image_URI__c</columns>
    <columns>B2B_Warranty_Warning__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Assets</label>
</ListView>