force-app/main/default/objects/Asset/listViews/My_Assets_Company_Comm.listView-meta.xml
<ListView>
    <fullName>My_Assets_Company_Comm</fullName>
    <columns>ASSET.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Warranty_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Users_Companys_Asset__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Purchased,Shipped,Installed,Registered</value>
    </filters>
    <filters>
        <field>ASSET.PARENT</field>
        <operation>equals</operation>
    </filters>
    <label>My Company&apos;s Registered Products</label>
</ListView>