force-app/main/default/objects/Asset/listViews/SDO_All_Assets.listView-meta.xml
<ListView>
    <fullName>SDO_All_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>CONTACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>Warranty_Indicator__c</columns>
    <columns>Entitlement_Status__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>