force-app/main/default/objects/Asset/listViews/SDO_All_Enterprise_Assets.listView-meta.xml
<ListView>
    <fullName>SDO_All_Enterprise_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>ASSET.PARENT</columns>
    <columns>Warranty_Indicator__c</columns>
    <columns>Entitlement_Status__c</columns>
    <columns>Scheduled_Servicing__c</columns>
    <columns>Service_Frequency_Weeks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Asset</value>
    </filters>
    <label>All - Enterprise Assets</label>
</ListView>