force-app/main/default/objects/Asset/listViews/SDO_Lauren_Bailey_Assets.listView-meta.xml
<ListView>
    <fullName>SDO_Lauren_Bailey_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>Entitlement_Status__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>B2B_Product_Image_URI__c</columns>
    <columns>Warranty_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Lauren Bailey</value>
    </filters>
    <label>User - Lauren Bailey Assets</label>
</ListView>